# watsonx-quiz-generator

./: ReadME.md
backend/: .env.example  generate_quiz.py  main.py  prompts.py  pyproject.toml  test.py  utils.py
frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Header.tsx  Loading.tsx  Page1.tsx  Page2.tsx  Page3.tsx
